# kafka-celery-bridge

./: ._LICENSE  Dockerfile  LICENSE  README.md  __init__.py  advanced_with_redis.py  basic_usage.py  bridge.py  main.py  pyproject.toml  requirements.txt  test_bridge.py
.github/workflows/: publish.yml
